[gd_scene load_steps=4 format=3 uid="uid://b78flgjfuuuvf"]

[ext_resource type="PackedScene" uid="uid://b4v64tyc1iwhy" path="res://Scenes/player.tscn" id="1_5ul8j"]
[ext_resource type="Script" path="res://Scripts/sandbox.gd" id="1_cyoo2"]
[ext_resource type="Texture2D" uid="uid://ytobvpm1a632" path="res://Assets/Sprites/Blocks/Grass Block.png" id="4_c0i18"]

[node name="Sandbox" type="Node2D"]
script = ExtResource("1_cyoo2")

[node name="Player" parent="." instance=ExtResource("1_5ul8j")]
z_index = 1
position = Vector2(120, 56)

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="LevelTimer" type="Timer" parent="."]
autostart = true

[node name="TopBar" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="TopBar"]
offset_right = 255.0
offset_bottom = 25.0

[node name="ColorRect" type="ColorRect" parent="TopBar/MarginContainer"]
layout_mode = 2
color = Color(0.108173, 0.560458, 0.991691, 0.458824)

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/MarginContainer"]
layout_mode = 2

[node name="Grass Section" type="HBoxContainer" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Grass Icon" type="TextureRect" parent="TopBar/MarginContainer/HBoxContainer/Grass Section"]
visible = false
layout_mode = 2
texture = ExtResource("4_c0i18")

[node name="Grass Amount" type="Label" parent="TopBar/MarginContainer/HBoxContainer/Grass Section"]
layout_mode = 2
text = "0"

[node name="Stone Section" type="HBoxContainer" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Stone Icon" type="TextureRect" parent="TopBar/MarginContainer/HBoxContainer/Stone Section"]
layout_mode = 2

[node name="Stone Amount" type="Label" parent="TopBar/MarginContainer/HBoxContainer/Stone Section"]
layout_mode = 2

[node name="Time Section" type="HBoxContainer" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Time Icon" type="TextureRect" parent="TopBar/MarginContainer/HBoxContainer/Time Section"]
layout_mode = 2

[node name="Time Amount" type="Label" parent="TopBar/MarginContainer/HBoxContainer/Time Section"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Blocks" type="Node2D" parent="."]

[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
[connection signal="pressed" from="TopBar/MarginContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
